--- a/x64/Debug/web/Samples/DemoSelector/DemoSelector.html
+++ b/x64/Debug/web/Samples/DemoSelector/DemoSelector.html
@@ -17,7 +17,7 @@
         </div>
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoCPPTextureInBrowser')" disabled="true">DemoCPPTextureInBrowser</button>
-            <span>Demo for testing custom DirectX11 textures pulled into Ultralight via a custom GPU driver implementation. <span style="color: rgb(208, 8, 8);"><b>[Work in Progress]</b></span></span>
+            <span><span style="color: rgb(208, 8, 8);"><b>[Work in Progress]</b></span> Demo for testing custom DirectX11 textures pulled into Ultralight via a custom GPU driver implementation.</span>
         </div>
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoInspector')">DemoInspector</button>
