added draw sprite function to renderer and added overlayed cpp texture on div sample

--- a/x64/Debug/web/Samples/DemoSelector/DemoSelector.html
+++ b/x64/Debug/web/Samples/DemoSelector/DemoSelector.html
@@ -35,6 +35,9 @@
             <button onclick="CallEvent('SelectDemo', 'DemoTransparent')">DemoTransparent</button>
             <span>This demo is an example of a window with transparency using DirectComposition. This has not been thoroughly tested.</span>
         </div>
-        
+        <div>
+            <button onclick="CallEvent('SelectDemo', 'DemoOverlayedCPPTexture')">DemoOverlayedCPPTexture</button>
+            <span>This demo is an example of a window with a C++ texture overlayed over a specific div. <span style="color: rgb(196, 4, 4);"><b>This method is not recommended.</b></span> The <b>DemoCPPTextureInBrowser</b> method is recommended where a custom GPU driver handles the textures instead.</b></span>
+        </div>
     </body>
 </html>
