--- a/x64/Debug/web/Samples/DemoSelector/DemoSelector.html
+++ b/x64/Debug/web/Samples/DemoSelector/DemoSelector.html
@@ -15,10 +15,7 @@
             <button onclick="CallEvent('SelectDemo', 'DemoBorderlessResizableMovable')">DemoBorderlessResizableMovable</button>
             <span>Same as previous demo, but this window is movable by dragging the custom title bar.</span>
         </div>
-        <div>
-            <button onclick="CallEvent('SelectDemo', 'DemoCPPTextureInBrowser')" disabled="true">DemoCPPTextureInBrowser</button>
-            <span><span style="color: rgb(208, 8, 8);"><b>[Work in Progress]</b></span> Demo for testing custom DirectX11 textures pulled into Ultralight via a custom GPU driver implementation.</span>
-        </div>
+        
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoInspector')">DemoInspector</button>
             <span>This demo opens two windows. One window will load google.com and the other window will act as an inspector on the view that has google.com loaded.</span>
@@ -35,9 +32,17 @@
             <button onclick="CallEvent('SelectDemo', 'DemoTransparent')">DemoTransparent</button>
             <span>This demo is an example of a window with transparency using DirectComposition. This has not been thoroughly tested.</span>
         </div>
+         <div>
+            <button onclick="CallEvent('SelectDemo', 'DemoAntiAliasTest')">DemoAntiAliasTest</button>
+            <span>This demo shows how to create windows where the Ultralight Views have different sample counts to demonstrate the visual difference if MSAA is on or not.</b></span>
+        </div>
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoOverlayedCPPTexture')">DemoOverlayedCPPTexture</button>
             <span>This demo is an example of a window with a C++ texture overlayed over a specific div. <span style="color: rgb(196, 4, 4);"><b>This method is not recommended.</b></span> The <b>DemoCPPTextureInBrowser</b> method is recommended where a custom GPU driver handles the textures instead.</b></span>
+        </div>
+        <div>
+            <button onclick="CallEvent('SelectDemo', 'DemoCPPTextureInBrowser')" disabled="true">DemoCPPTextureInBrowser</button>
+            <span><span style="color: rgb(208, 8, 8);"><b>[Work in Progress]</b></span> Demo for testing custom DirectX11 textures pulled into Ultralight via a custom GPU driver implementation.</span>
         </div>
     </body>
 </html>
