worked on gltf viewer added some more gltf models

--- a/x64/web/Samples/DemoSelector/DemoSelector.html
+++ b/x64/web/Samples/DemoSelector/DemoSelector.html
@@ -45,6 +45,10 @@
             <span><span style="color: rgb(208, 8, 8);"></span> DX11 render test. Renders a cube with different options selectable via an Ultralight View to the windows render target.</span>
         </div>
         <div>
+            <button onclick="CallEvent('SelectDemo', 'DemoGLTFViewer')">DemoGLTFViewer</button>
+            <span><span style="color: rgb(208, 8, 8);"><b>[Work in Progress]</b></span> Demo for loading and viewing GLTF files. Must be in ascii format without embedded textures.</span>
+        </div>
+        <div>
             <button onclick="CallEvent('SelectDemo', 'DemoCPPTextureInBrowser')" disabled="true">DemoCPPTextureInBrowser</button>
             <span><span style="color: rgb(208, 8, 8);"><b>[Work in Progress]</b></span> Demo for testing custom DirectX11 textures pulled into Ultralight via a custom GPU driver implementation.</span>
         </div>
