--- a/x64/web/Samples/OpenFileDialog/OpenFileDialog.html
+++ b/x64/web/Samples/OpenFileDialog/OpenFileDialog.html
@@ -16,6 +16,7 @@
         <div id="div_footerSection">
             <input id="input_selectedFile" style="width: 100%; margin-left: 4px; margin-top: 4px;"/>
             <button onclick="OpenDirectoryEntry()">Open</button>
+            <input id="input_fileType"  style="width: 100%; margin-top: 4px;" disabled/>
         </div>
     </body>
     <script src="OpenFileDialog.js"></script>
