fixed window title with cpptexture demo title

--- a/x64/web/Samples/CPPTextureInBrowser/CPPTextureInBrowser.html
+++ b/x64/web/Samples/CPPTextureInBrowser/CPPTextureInBrowser.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <img src="test.png"/><br/>
-        <span style="color:white">The image should be displayed below.</span>
+        <span style="color:white">The ImageSource img should be displayed below.</span>
         <img src="AIBowser.imgsrc"/>
     </body>
     <script src="CPPTextureInBrowser.js"></script>
