added error checking for window class registration and added window class unregistration on window destructor changed div color on cpptexture test

--- a/x64/web/Samples/CPPTextureInBrowser/CPPTextureInBrowser.html
+++ b/x64/web/Samples/CPPTextureInBrowser/CPPTextureInBrowser.html
@@ -2,7 +2,10 @@
     <body>
         <img src="test.png"/><br/>
         <span style="color:white">The ImageSource img should be displayed below.</span>
-        <img src="AIBowser.imgsrc"/>
+        <div style="background-color: rgb(76, 76, 101);">
+            <img src="AIBowser.imgsrc"/>
+        </div>
+        
     </body>
     <script src="CPPTextureInBrowser.js"></script>
 </html>
