--- a/x64/web/Samples/CPPTextureInBrowser/CPPTextureInBrowser.html
+++ b/x64/web/Samples/CPPTextureInBrowser/CPPTextureInBrowser.html
@@ -1,11 +1,7 @@
 <html>
     <body>
-        <img src="test.png"/><br/>
         <span style="color:white">The ImageSource img should be displayed below.</span>
-        <div style="background-color: rgb(76, 76, 101);">
-            <img src="AIBowser.imgsrc"/>
-        </div>
-        
+        <div id="div_cppTextureContainer"></div>
     </body>
     <script src="CPPTextureInBrowser.js"></script>
 </html>
