Restructured ownership of ultralight views and windows. UltralightManager is now only owner of views and WindowManager now manages the windows. Added WeakWrapper around weak_ptr - found bug with anti alias test pushing changes to review

--- a/x64/web/Samples/DemoSelector/DemoSelector.html
+++ b/x64/web/Samples/DemoSelector/DemoSelector.html
@@ -34,7 +34,7 @@
         </div>
          <div>
             <button onclick="CallEvent('SelectDemo', 'DemoAntiAliasTest')">DemoAntiAliasTest</button>
-            <span>This demo shows how to create windows where the Ultralight Views have different sample counts to demonstrate the visual difference if MSAA is on or not.</b></span>
+            <span><span style="color: rgb(208, 8, 8);"><b>[Broken - Temporarily modified for testing.]</b></span>This demo shows how to create windows where the Ultralight Views have different sample counts to demonstrate the visual difference if MSAA is on or not.</b></span>
         </div>
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoOverlayedCPPTexture')">DemoOverlayedCPPTexture</button>
@@ -50,7 +50,7 @@
         </div>
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoCPPTextureInBrowser')">DemoCPPTextureInBrowser</button>
-            <span><span style="color: rgb(208, 8, 8);"><b>[WIP - Not Functional]</b></span> Demo for testing custom DirectX11 textures pulled into Ultralight via an ImageSource.</span>
+            <span><span style="color: rgb(208, 8, 8);"><b>[Partially working]</b></span> Demo for testing custom DirectX11 textures pulled into Ultralight via an ImageSource.</span>
         </div>
         
     </body>
