worked on multiple embedded render target textures for cubes demo

--- a/x64/web/Samples/DemoSelector/DemoSelector.html
+++ b/x64/web/Samples/DemoSelector/DemoSelector.html
@@ -52,6 +52,9 @@
             <button onclick="CallEvent('SelectDemo', 'DemoCPPTextureInBrowser')">DemoCPPTextureInBrowser</button>
             <span><span style="color: rgb(208, 8, 8);"><b>[Partially working]</b></span> Demo for testing custom DirectX11 textures pulled into Ultralight via an ImageSource.</span>
         </div>
-        
+        <div>
+            <button onclick="CallEvent('SelectDemo', 'DemoMultipleCubesEmbedded')">DemoMultipleCubesEmbedded</button>
+            <span>Multiple embedded C++ textures referencing different offscreen render targets and rendered in an Ultralight View.</span>
+        </div>
     </body>
 </html>
