updated anti alias changes after fixes to callevent calls after view was closed updated demo selector info for which tests are working

--- a/x64/web/Samples/DemoSelector/DemoSelector.html
+++ b/x64/web/Samples/DemoSelector/DemoSelector.html
@@ -18,7 +18,7 @@
         
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoInspector')">DemoInspector</button>
-            <span>This demo opens two windows. One window will load google.com and the other window will act as an inspector on the view that has google.com loaded.</span>
+            <span><span style="color: rgb(208, 8, 8);"><b>[Broken - Testing new inspector.]</b></span>This demo opens two windows. One window will load google.com and the other window will act as an inspector on the view that has google.com loaded.</span>
         </div>
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoJSCPPCommunication')">DemoJSCPPCommunication</button>
@@ -34,7 +34,7 @@
         </div>
          <div>
             <button onclick="CallEvent('SelectDemo', 'DemoAntiAliasTest')">DemoAntiAliasTest</button>
-            <span><span style="color: rgb(208, 8, 8);"><b>[Broken - Temporarily modified for testing.]</b></span>This demo shows how to create windows where the Ultralight Views have different sample counts to demonstrate the visual difference if MSAA is on or not.</b></span>
+            <span>This demo shows how to create windows where the Ultralight Views have different sample counts to demonstrate the visual difference if MSAA is on or not.</b></span>
         </div>
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoOverlayedCPPTexture')">DemoOverlayedCPPTexture</button>
@@ -42,7 +42,7 @@
         </div>
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoCubeDraw')">DemoCubeDraw</button>
-            <span><span style="color: rgb(208, 8, 8);"></span> DX11 render test. Renders a cube with different options selectable via an Ultralight View to the windows render target.</span>
+            <span>DX11 render test. Renders a cube with different options selectable via an Ultralight View to the windows render target.</span>
         </div>
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoGLTFViewer')">DemoGLTFViewer</button>
@@ -50,7 +50,7 @@
         </div>
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoCPPTextureInBrowser')">DemoCPPTextureInBrowser</button>
-            <span><span style="color: rgb(208, 8, 8);"><b>[Partially working]</b></span> Demo for testing custom DirectX11 textures pulled into Ultralight via an ImageSource.</span>
+            <span>Demo for testing custom DirectX11 textures pulled into Ultralight via an ImageSource.</span>
         </div>
         <div>
             <button onclick="CallEvent('SelectDemo', 'DemoMultipleCubesEmbedded')">DemoMultipleCubesEmbedded</button>
