--- a/x64/web/Samples/DemoSelector/DemoSelector.html
+++ b/x64/web/Samples/DemoSelector/DemoSelector.html
@@ -56,5 +56,9 @@
             <button onclick="CallEvent('SelectDemo', 'DemoMultipleCubesEmbedded')">DemoMultipleCubesEmbedded</button>
             <span>Multiple embedded C++ textures referencing different offscreen render targets and rendered in an Ultralight View.</span>
         </div>
+        <div>
+            <button onclick="CallEvent('SelectDemo', 'DemoScreenShareHelper')">DemoScreenShareHelper</button>
+            <span>Allows setting up a staging window for sharing part of a screen since Microsoft Teams is poorly designed and lacks a partial screen share feature.</span>
+        </div>
     </body>
 </html>
